# tigervnc

./: .gitignore  AGENTS.md  BUILDING.txt  CMakeLists.txt  README.rst
.github/workflows/: cmake-single-platform.yml
cmake/Modules/: Findx265.cmake
common/: CMakeLists.txt
common/audio/: AudioCapture.h  AudioCapturePulse.cxx  AudioCapturePulse.h  AudioCaptureWin.cxx  AudioCaptureWin.h  CMakeLists.txt
common/network/: CMakeLists.txt  WebSocketSocket.cxx  WebSocketSocket.h
common/rfb/: CConnection.cxx  CConnection.h  CMakeLists.txt  CMsgHandler.h  CMsgReader.cxx  CMsgReader.h  Decoder.cxx  H264LibavDecoderContext.cxx  H265Decoder.cxx  H265Decoder.h  H265DecoderContext.cxx  H265DecoderContext.h  H265X265DecoderContext.cxx  H265X265DecoderContext.h  SMsgWriter.cxx  SMsgWriter.h  encodings.cxx  encodings.h  msgTypes.h
doc/: packaging.rst  tunnel-command-injection-poc.rst
packaging/flatpak/: com.tigervnc.vncviewer.yaml
po/: bg.po  cs.po  da.po  de.po  el.po  eo.po  es.po  fi.po  fr.po  fur.po  he.po  hu.po  id.po  it.po  ka.po  ko.po  nl.po  pl.po  pt_BR.po  ro.po  ru.po  sk.po  sr.po  sv.po  tigervnc.pot  tr.po  uk.po  vi.po  zh_CN.po  zh_TW.po
release/: CMakeLists.txt  Info.plist.in  tigervnc.iss.in  winvnc.iss.in
vncviewer/: CConn.cxx  CConn.h  CMakeLists.txt  DesktopWindow.cxx  DesktopWindow.h  KeyboardWin32.cxx  KeyboardWin32.h  OptionsDialog.cxx  OptionsDialog.h  ServerDialog.cxx  VideoRecorder.cxx  VideoRecorder.h  Viewport.cxx  Viewport.h  cocoa.mm  org.tigervnc.vncviewer.metainfo.xml.in  parameters.cxx  parameters.h  vncviewer.cxx  vncviewer.man
(+27 files in other folders)
